--- a/views/addCourse.hbs
+++ b/views/addCourse.hbs
@@ -11,7 +11,7 @@
             </div>
 
             <div class="col s12" style="text-align: end;">
-                <button class="waves-effect waves-light btn" type="submit">Create category</button>
+                <button class="waves-effect waves-light btn" type="submit">Create course</button>
 
                 <select name="categoryID" class="browser-default">
                     <option value="">Select Category</option>
