--- a/views/category.hbs
+++ b/views/category.hbs
@@ -1,7 +1,36 @@
 <div class="container">
-    <div class="row">
-        <div class="col s10">
-            <h1>{{name}}</h1>
-        </div>
+  <div class="row">
+    <div class="col s10">
+      <h1>{{title}}</h1>
     </div>
+  </div>
+  <div class="row">
+    {{#each products}}
+      <div class="col s6">
+        <div class="card" style="height: 580px;">
+          <div class="card-image">
+            <img src={{ image }} />
+            <span class="card-title">{{ name }}</span>
+          </div>
+          <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of
+              information. I am convenient because I require little markup to
+              use effectively.</p>
+          </div>
+          <div class="card-action">
+            <a href="/courses/{{id}}">View</a>
+            <a
+              href="/courses/update/{{id}}"
+              class="waves-effect waves-light btn"
+            >Update</a>
+            <a
+              href="/courses/remove/{{id}}"
+              class="waves-effect waves-light btn"
+              style="background-color: red;"
+            >Remove</a>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+  </div>
 </div>
