--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,13 +1,18 @@
 <nav>
-    <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Udemy</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/courses">All courses</a></li>
-            <li><a href="/categories">Categories</a></li>
-            <li><a href="/about">About</a></li>
-            <a class="waves-effect add-btn waves-light btn" href="/categories/create">Create Category</a>
-            <a class="waves-effect add-btn waves-light btn" href="/courses/course/create">Create Course</a>
-        </ul>
-    </div>
+  <div class="nav-wrapper">
+    <a href="/" class="brand-logo">Udemy</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="/courses">All courses</a></li>
+      <li><a href="/categories">Categories</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
+  </div>
+  <a
+      class="waves-effect add-btn waves-light btn"
+      href="/categories/create"
+    >Create Category</a>
+    <a
+      class="waves-effect add-btn waves-light btn"
+      href="/courses/course/create"
+    >Create Course</a>
 </nav>
-
